変数誤り修正

--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,4 +1,4 @@
-        <% if @like %>
+        <% if like %>
           <%= button_to like_path(event), method: :delete, turbo: false, remote: true do %>
             ♥<%= event.likes.count %>いいね
           <% end %>
