--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#likes_buttons').html("<%= j(render "like", event: @event) %>");
+$('#likes_buttons').html("<%= j(render "like", event: @event, like: @like) %>");
