--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -86,7 +86,7 @@
         </table>
       <% else %>
         <div class="alert alert-secondary text-center" role="alert">
-          <p>現在予約中のメンバーはいません。</p>
+          現在予約中のメンバーはいません。
         </div>
       <% end %>
     <% end %>
