--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -63,7 +63,7 @@
     }
 
     &-main{
-        margin: 30px 0;
+        margin-top: 30px;
         border: #ccc 1px solid;
         border-radius: 0.5rem;
 
