--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,5 @@
       <header>
-        <nav class="navbar navbar-expand-lg navbar-light text-dark bg-dark navbar-fixed-top" id="home">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-fixed-top" id="home">
             <%= link_to "Field of Music", events_path, class: "navbar-brand text-white mss-lg-5"  %>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
