--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,12 +2,12 @@
     <div class="my_edit-box">
         <h2 class="title__main">プロフィール編集</h2>
         <%= form_for @user do |f| %>
-            <div class="field form-group">
+            <div class="field form-group editForm-part">
                 <p class="label label-option">担当パート</p>
                 <%= f.collection_check_boxes(:part_ids, Part.all, :id, :name) do |part| %>
-                    <%= part.label class: "part-item part-#{part.text}" do %>
-                    <%= part.check_box class: 'part-check' %>
-                    <%= part.text %>
+                    <%= part.label do %>
+                        <%= part.check_box class: 'part-check' %>
+                        <span class="part-item"><%= part.text %></span>
                     <% end %>
                 <% end %>
             </div>
