--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -31,7 +31,7 @@
               メンバー
             <% end %>
           </td>
-          <td>
+          <td class="users-part part-items">
             <% user.parts.each do |part|%>
               <span class="part-item part-<%= part.name %>"><%= part.name %></span>
             <% end %>
