--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -9,7 +9,7 @@
             </ul>
         </div>
         <div class="user__cont col-8">
-            <div class="user__cont-main text-center">
+            <div class="user__cont-main">
                 <%= render partial: 'profile', locals: { user: @user }%>
             </div>
             <div class="user__cont-reserved">
