レイアウト調整

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -7,7 +7,7 @@
 .event-contents{
     max-width: 1000px;
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 50px 10px;
 
     h2{
         margin-bottom: 20px;
