--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -10,8 +10,14 @@ li{
     }
 
     &-main{
+        text-align: center;
+
         & > div{
             margin-bottom: 10px;
+        }
+
+        .part-items{
+            justify-content: center;
         }
     }
 
@@ -31,15 +37,10 @@ li{
     &-profile{
         word-wrap: break-word;
         background-color: #fff;
-        background-clip: border-box;
-        border: 1px solid #ccc;
-        border-radius: 0.5rem;
-        width: 50%;
         padding: 20px 30px;
         margin: 0 auto;
     }
 }
-
 
 .user__sidebar{
     &-list{
