--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,3 +1,4 @@
+<div class="user__cont-main">
     <div class="user__cont-image">
         <% if user.image? %>
             <%= image_tag user.image.url %>
@@ -18,3 +19,4 @@
         <% end %>
     </div>
     <div class="user__cont-profile"><%= user.profile %></div>
+</div>
