--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -43,18 +43,27 @@ li{
 }
 
 .user__sidebar{
+
+    &-lists{
+        margin-left: 0;
+        padding: 0;
+    }
+
+
     &-list{
-        background-color: #ccc;
-        width: 230px;
+        background-color: #666;        
         text-align: center;
         padding: 10px 0;
+        margin-bottom: 5px;
     
         a{
+            display: block;
+            width: 100%;
             text-decoration: none;
-            color: #222;
-    
+            color: #fff;
+
             &:hover{
-                color: #fff;
+                opacity: 1;
             }
         }
     }
