--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -9,6 +9,8 @@
     <div class="user__cont-name">
     <% if user.name %>
         <%= user.name %>
+        <i class="fa-solid fa-gear"></i>
+        <i class="fa-brands fa-github"></i>
     <% else %>
         <%= user.email %>
     <% end %>
