マイページレイアウト調整

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -69,14 +69,14 @@ button{
 
 .editForm-part{
     label input {
-        display: none; /* デフォルトのinputは非表示にする */
+        display: none;
     }
     label span {
         padding: 5px 10px;
         margin: 0 5px;
         border-radius: 5px;
-        color: #333; /* 文字色を黒に */
-        border: 1px solid #333; /* 淵の線を指定 */
+        color: #333;
+        border: 1px solid #333;
         background-color: #fff;
     }
     label input:checked + span {
