--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -2,7 +2,6 @@ li{
     list-style: none;
 }
 
-
 .user__cont{
 
     & > div{
@@ -42,25 +41,28 @@ li{
     }
 }
 
-.user__sidebar{
 
-    &-lists{
+
+.user__menu{
+
+    &-items{
         margin-left: 0;
         padding: 0;
     }
 
-
-    &-list{
-        background-color: #666;        
+    &-item{
+        background-color: #fff;
+        border: #666 1px solid;      
         text-align: center;
-        padding: 10px 0;
+        padding: 10px;
         margin-bottom: 5px;
+        border-radius: 5px;
     
         a{
             display: block;
             width: 100%;
             text-decoration: none;
-            color: #fff;
+            color: #666;
 
             &:hover{
                 opacity: 1;
