--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,8 @@
     <h2 class="sign_up-title text-center title__main">メンバー新規作成</h2>
 
     <div class="sign_up-body">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_with model: @user, url: user_registration_path, data: { turbo: false }, local: true do |f| %>
+        <%= render "devise/shared/error_messages", resource: @user %>
 
         <div class="field form-group">
           <%= f.label :email, class: "form-label label label-required" %><br />
